--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".auth.AuthActivity"
+            android:name="com.bhavsar.vishal.moneytrackerapp.ui.auth.AuthActivity"
             android:exported="true"
             android:label="@string/title_activity_auth" />
         <activity
